options: fix up vertical spacing
issues:
1. there is extraneous padding between sections in some cases (i.e. when the top or bottom element has top or bottom margin). Solution: don't apply top margin for top element or bottom margin for bottom element.
2. the top section h3 on each top level options page jiggles when you switch to that page (each has a different vertical alignment relative to the page title). Solution: set vertical alignment of sections on the section h3 rather than section content (content will in turn align to h3 baseline).
3. the security button on the advanced page is too close to the checkbox. Solution: add .section-group div.

BUG=none
TEST=manual


Review URL: http://codereview.chromium.org/8344027

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@106378 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: a6680f0a2f230d3897f34dd385ead90848bc1265

--- a/chrome/browser/resources/options/advanced_options.css
+++ b/chrome/browser/resources/options/advanced_options.css
@@ -4,12 +4,12 @@
  * found in the LICENSE file.
  */
 
-#advancedPage > section > div:only-of-type > div.checkbox {
-  margin: 10px 0;
+#advancedPage .section-group:not(:first-child) {
+  margin-top: 10px;
 }
 
-#advancedPage .section-group {
-  margin: 10px 0;
+#advancedPage .section-group:not(:last-child) {
+  margin-bottom: 10px;
 }
 
 #advancedPage select,
