--- a/chrome/browser/resources/options/options_page.css
+++ b/chrome/browser/resources/options/options_page.css
@@ -268,6 +268,14 @@ section > div:only-of-type {
   -webkit-box-flex: 1;
 }
 
+/* Don't allow edge margin on the first/last child of a section. */
+section > h3 + * > *:last-child {
+  margin-bottom: 0;
+}
+section > h3 + * > *:first-child {
+  margin-top: 0;
+}
+
 .option {
   margin-top: 0;
 }
@@ -580,8 +588,13 @@ html[flashPluginSupportsClearSiteData] .clear-plugin-lso-data-disabled {
 /* right table column containing settable options */
 .displaytable > section > h3 + div,
 .displaytable > section > h3 + table {
-  padding-top: 17px;
   padding-bottom: 20px;
+}
+
+/* Setting the padding on the header so the alignment doesn't depend on the
+ * contents of the right table column.  */
+.displaytable > section > h3 {
+  padding-top: 17px;
 }
 
 .displaytable > section > * {
